[APPDEV-2454] Side Cart Redesign - [APPBUG-1462] sidecart scroll behavior on tablets fix
git-svn-id: https://appdevsvn.nj01/appdev/FreshDirect/trunk@23316 842219ff-9341-0410-a943-573460bdd4de

--- a/projects/Media/docroot/assets/css/common/sidecart.css
+++ b/projects/Media/docroot/assets/css/common/sidecart.css
@@ -289,6 +289,7 @@
   overflow-y:auto;
   overflow-x:hidden;
   color:#5a5a5a;
+  -webkit-overflow-scrolling: touch;
 }
 
 #popupcart .footer { 
